[package]
name = "auto-web"
version = "0.1.0"
authors = ["JaeYong Choi <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
static_commands = []

[dependencies]
fantoccini = "0.14.*"
yaml2commands = {path = "yaml2commands"}
tokio = {version = "*", features = ["macros", "rt-threaded"]}
structopt = "0.3.19"
anyhow = "1.0.33"

[build-dependencies]
yaml2commands = {path = "yaml2commands"}
